--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.5",
     "vue": "^3.4.15",
+    "vue-i18n": "^9.10.1",
     "vue-router": "^4.2.5",
     "vuetify": "^3.5.6"
   },
