--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.4.15",
     "vue-i18n": "^9.10.1",
     "vue-router": "^4.0.13",
+    "vue3-toastify": "^0.2.1",
     "vuetify": "^3.5.6"
   },
   "devDependencies": {
