--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@vue/vue3-jest": "^29.2.6",
     "axios": "^1.6.7",
+    "babel-jest": "^29.7.0",
     "date-fns": "^3.5.0",
+    "jest-environment-jsdom": "^29.7.0",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.6",
@@ -32,14 +37,17 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "jest": "^29.7.0",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.35",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.3",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
